// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`--check with unknown path and no parser multiple files 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO
[warn] foo.js
[warn] Code style issues found in the above file(s). Forgot to run Prettier?

=================================== (stdout) ===================================
Checking formatting...

`;

exports[`--check with unknown path and no parser specific file 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

=================================== (stdout) ===================================
Checking formatting...
All matched files use Prettier code style!

`;

exports[`--list-different with unknown path and no parser multiple files 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

`;

exports[`--list-different with unknown path and no parser specific file 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

`;

exports[`--write and --check with unknown path and no parser multiple files 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO
[warn] foo.js
[warn] Code style issues fixed in the above file(s).

=================================== (stdout) ===================================
Checking formatting...

=================================== (write) ====================================
[{"filename":"foo.js","content":"foo();/n"}]
`;

exports[`--write and --check with unknown path and no parser specific file 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

=================================== (stdout) ===================================
Checking formatting...
All matched files use Prettier code style!

`;

exports[`--write and --list-different with unknown path and no parser multiple files 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

=================================== (stdout) ===================================
foo.js

=================================== (write) ====================================
[{"filename":"foo.js","content":"foo();/n"}]
`;

exports[`--write and --list-different with unknown path and no parser specific file 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

`;

exports[`--write with unknown path and no parser multiple files 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

=================================== (stdout) ===================================
foo.js 0ms

=================================== (write) ====================================
[{"filename":"foo.js","content":"foo();/n"}]
`;

exports[`--write with unknown path and no parser specific file 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

`;

exports[`API with no path and no parser prettier.check 1`] = `
Array [
  "No parser and no filepath given, using 'babel' the parser now but this will throw an error in the future. Please specify a parser or a filepath so one can be inferred.",
]
`;

exports[`API with no path and no parser prettier.format 1`] = `
Array [
  "No parser and no filepath given, using 'babel' the parser now but this will throw an error in the future. Please specify a parser or a filepath so one can be inferred.",
]
`;

exports[`Known/Unknown 1`] = `
=================================== (stdout) ===================================
known.js

`;

exports[`stdin no path and no parser --check logs error but exits with 0 1`] = `
=================================== (stderr) ===================================
[error] No parser and no file path given, couldn't infer a parser.

`;

exports[`stdin no path and no parser --list-different logs error but exits with 0 1`] = `
=================================== (stderr) ===================================
[error] No parser and no file path given, couldn't infer a parser.

`;

exports[`stdin no path and no parser logs error and exits with 2 1`] = `
=================================== (stderr) ===================================
[error] No parser and no file path given, couldn't infer a parser.

`;

exports[`stdin with unknown path and no parser --check logs error but exits with 0 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: foo

`;

exports[`stdin with unknown path and no parser --list-different logs error but exits with 0 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: foo

`;

exports[`stdin with unknown path and no parser logs error and exits with 2 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: foo

`;

exports[`unknown path and no parser multiple files 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

=================================== (stdout) ===================================
foo();

`;

exports[`unknown path and no parser specific file 1`] = `
=================================== (stderr) ===================================
[error] No parser could be inferred for file: FOO

`;
